Enabled stylecheck and jacoco coverage